# escrow-vaultX

./: Cargo.toml  README.md  package-lock.json  package.json
app/: layout.tsx  page.tsx
app/components/: WalletConnection.tsx
contracts/escrow/: Cargo.toml
contracts/escrow/src/: event.rs  events.rs  lib.rs  tests.rs
contracts/escrow/test_snapshots/: test_create_and_get_escrow.1.json  test_create_approve_claim_single_recipient.1.json  test_create_fails_on_invalid_percentage_sum.1.json
contracts/escrow/tests/: tests.rs
